<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog_content"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/dialog_solicitar_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"
        android:text="@string/dialog_title_ejemplo"
        android:textStyle="bold"
        android:textSize="@dimen/txt_size_primario" />

        <android.support.design.widget.TextInputEditText
            android:id="@+id/dialog_solicitar_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal">

        <Button
            android:id="@+id/dialog_solicitar_btn_cancelar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/button_cancelar"
            android:backgroundTint="@color/Klavado"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/dialog_solicitar_btn_aceptar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/button_aceptar"
            android:backgroundTint="@color/Klavado"
            android:textColor="@android:color/white" />

    </LinearLayout>
</LinearLayout>