<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Pago.View.Fragment.TarjetaCreditoFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="5dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="4dp">

            <android.support.v7.widget.GridLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                app:columnCount="2"
                app:useDefaultMargins="true">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingHorizontal="40dp"
                    android:layout_marginBottom="5dp"
                    android:visibility="gone"
                    app:layout_columnSpan="2">

                    <TextView
                        android:id="@+id/titulo1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Pagos &amp;"
                        android:textSize="30sp"
                        android:textColor="@color/primary_text"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/titulo2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:text="facturación"
                        android:textSize="25dp"
                        android:textColor="@color/Klavado"
                        android:textStyle="bold"/>

                </LinearLayout>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_columnSpan="1"
                    app:layout_columnWeight="9">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/fragment_num_tarjeta_credito"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:backgroundTint="@color/Klavado"
                        android:ems="13"
                        android:hint="@string/txt_hint_tarjeta_credito"
                        android:maxLength="19"
                        android:inputType="number"
                        android:maxLines="1"
                        android:textSize="@dimen/txt_size_primario" />
                </android.support.design.widget.TextInputLayout>
                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/txt_tipo_tarjetas"
                    android:src="@drawable/tipo_pago"
                    app:layout_gravity="center_vertical"
                    app:layout_columnSpan="1"
                    app:layout_columnWeight="1" />
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_columnSpan="2">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/fragment_nombre_tarjeta_credito"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:backgroundTint="@color/Klavado"
                        android:ems="13"
                        android:hint="@string/txt_hint_nombre_apellido"
                        android:inputType="text"
                        android:maxLines="1"
                        android:textSize="@dimen/txt_size_primario" />
                </android.support.design.widget.TextInputLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/txt_fecha_vencimiento"
                    android:text="@string/txt_fecha_vencimiento"
                    android:textColor="@color/primary_text"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    app:layout_columnSpan="2" />
                <android.support.design.widget.TextInputLayout
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    app:layout_columnSpan="2">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/fragment_fecha_tarjeta_credito"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/txt_fecha_caducidad"
                        android:maxLength="5"
                        android:inputType="numberDecimal"
                        android:textSize="@dimen/txt_size_primario"
                        app:backgroundTint="@color/Klavado" />
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_columnWeight="5"
                    app:layout_columnSpan="1">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/fragment_cvv_tarjeta_credito"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/txt_codigo_seguridad"
                        android:inputType="numberPassword"
                        android:maxLength="3"
                        android:textSize="@dimen/txt_size_primario"
                        app:backgroundTint="@color/Klavado" />
                </android.support.design.widget.TextInputLayout>

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/txt_cvv"
                    android:src="@drawable/credit_card_cvv"
                    app:layout_columnWeight="5"
                    app:layout_columnSpan="1"/>

                <LinearLayout
                    android:id="@+id/boton_agregar_facturacion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/layout_redondo"
                    android:elevation="2dp"
                    android:padding="16dp"
                    android:orientation="horizontal"
                    app:layout_gravity="center"
                    app:layout_columnSpan="2">

                    <ImageView
                        android:id="@+id/img_agregar_factura"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/add"
                        android:layout_marginRight="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_gravity="center_vertical"
                        app:layout_columnSpan="1" />

                    <TextView
                        android:id="@+id/txt_agregar_factura"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/txt_fecha_vencimiento"
                        android:layout_gravity="center_vertical"
                        android:text="Agregar datos de facturación"
                        android:textColor="@color/secondary_text"
                        android:textSize="@dimen/txt_size_primario"
                        android:textStyle="normal"
                        app:layout_columnSpan="1" />

                </LinearLayout>

            </android.support.v7.widget.GridLayout>
        </android.support.v7.widget.CardView>

        <Button
            android:id="@+id/fragment_button_pagar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_button"
            android:layout_gravity="bottom"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="16dp"
            android:theme="@style/boton_menu_KLavado"
            android:text="@string/txt_pagar"
            android:textColor="@android:color/white"
            android:textStyle="bold"/>
    </LinearLayout>
</ScrollView>